fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li>Developed a website which provides an online platform for farmers as the final project for my
                         course (kinda like an online Uzhavar Sandhai/Farmer's Market) - <a
                             href="https://github.com/admkhalid/osiris_server">Repo for server side code.</a></li>
-                    <li>(Mini Project) Developed a micorblogging website with Django. <a
+                    <li>(Mini Project) Developed a microblogging website with Django. <a
                             href="https://github.com/admkhalid/kConnect">Repo Link.</a></li>
                     <li>(Under Development) Developing a bot which can play Grand Theft Auto 5.
                         (Originally created by sentdex). <a href="https://github.com/admkhalid/pygta5">Repo Link.</a>
