hyperlinked sentdex's github

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li>(Mini Project) Developed a microblogging website with Django. <a
                             href="https://github.com/admkhalid/kConnect">Repo Link.</a></li>
                     <li>(Under Development) Developing a bot which can play Grand Theft Auto 5.
-                        (Originally created by sentdex). <a href="https://github.com/admkhalid/pygta5">Repo Link.</a>
+                        (Originally created by <a href="github.com/sentdex">sentdex</a>). <a href="https://github.com/admkhalid/pygta5">Repo Link.</a>
                     </li>
                 </ul>
             </div>
