fixed resume link and linked the old page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="topnav has-shadow">
         <div class="topnav-right">
-          <a href="#search">My Edgier Page</a>
+          <a href="edgy.html">My Edgier Page</a>
         </div>
       </div>
     <section class="section pt-5 pb-3" id="hero">
@@ -46,7 +46,7 @@
                                 class="ml-1">LinkedIn</span>
                         </a>
                         <a class="button is-white card is-rounded contacts m-1"
-                            href="./kalid's Resume.pdf/">
+                            href="./kalid's Resume.pdf">
                             <span style="height: 20px;"><embed class="my-icon" src="assets/file-user.svg" /></span><span
                                 class="ml-1">Résumé</span>
                         </a>
