--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="topnav has-shadow">
         <div class="topnav-right">
-          <a href="edgy.html">My Edgier Page</a>
+            <a href="edgy.html">My Edgier Page</a>
         </div>
-      </div>
+    </div>
     <section class="section pt-5 pb-3" id="hero">
         <div class="container">
             <div class="columns is-centered is-multiline is-vcentered">
@@ -45,8 +45,7 @@
                             <span><i class="fab fa-linkedin-in" style="color: #0072b1;"></i></span><span
                                 class="ml-1">LinkedIn</span>
                         </a>
-                        <a class="button is-white card is-rounded contacts m-1"
-                            href="./kalid's Resume.pdf">
+                        <a class="button is-white card is-rounded contacts m-1" href="./kalid's Resume.pdf">
                             <span style="height: 20px;"><embed class="my-icon" src="assets/file-user.svg" /></span><span
                                 class="ml-1">Résumé</span>
                         </a>
@@ -55,14 +54,15 @@
             </div>
         </div>
     </section>
-    <section class="section details py-4">
+    <section class="section details py-4 mb-4">
         <div class="columns is-centered is-multiline is-vcentered">
             <div class="column is-5">
                 <div class="container card notification is-white px-5">
                     <h1 class="title is-size-4">About Me</h1>
                     <hr>
                     <p class="is-size-6 ">Hello! I'm Kalid Ahamed (pronounced Khalidh) and I'm
-                        a CSE Graduate from Tagore Engineering College (affiliated to Anna University) (2020), and an amateur
+                        a CSE Graduate from Tagore Engineering College (affiliated to Anna University) (2020), and an
+                        amateur
                         programmer.</p>
                     <br>
                     <p class="is-size-6 ">I love Computers, playing story driven games and
@@ -77,13 +77,15 @@
                     <h1 class="title is-size-4">Skills</h1>
                     <hr>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Areas</h3>
-                    <p class="is-size-6 mb-3">Fullstack Web Development (MVC and RESTful), Machine Learning (Beginner).</p>
-                    
+                    <p class="is-size-6 mb-3">Fullstack Web Development (MVC and RESTful), Machine Learning (Beginner).
+                    </p>
+
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Programming Languages</h3>
                     <p class="is-size-6 mb-3">Python, C++, JavaScript, Java, Dart.</p>
-                    
+
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Software Tools and Frameworks</h3>
-                    <p class="is-size-6 mb-2">Django REST Framework, Vue.js, Bulma CSS, Flutter (Beginner), TensorFlow (for
+                    <p class="is-size-6 mb-2">Django REST Framework, Vue.js, Bulma CSS, Flutter (Beginner), TensorFlow
+                        (for
                         Python) (Beginner).</p>
                 </div>
             </div>
@@ -92,16 +94,45 @@
                     <h1 class="title is-size-4">Achievements & Projects</h1>
                     <hr>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Awards</h3>
-                    <p class="is-size-6">Got awarded <strong>"Pride of Tagore"</strong> and <strong>"The Most Active Member of the Club 'Code-X' "</strong> on my college's Annual Day, 2019.</p>
+                    <p class="is-size-6">Got awarded <strong>"Pride of Tagore"</strong> and <strong>"The Most Active
+                            Member of the Club 'Code-X' "</strong> on my college's Annual Day, 2019.</p>
                     <br>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Osiris (Final Year Project)</h3>
-                    <p class="is-size-6">Created an online platform for farmers to sell their products directly to general population (Online Uzhavar Sandhai or Online Farmer's Market). Backend was developed with Django REST Framework (<a href="https://github.com/admkhalid/osiris_server/">GitHub Repo</a>), and the client app was developed with Flutter by <a href="https://github.com/rubanthilak">Ruban Thilak</a> (<a href="https://github.com/Rubanthilak/osiris-frontend">GitHub Repo</a>).</p>
+                    <p class="is-size-6">Created an online platform for farmers to sell their products directly to
+                        general population (Online Uzhavar Sandhai or Online Farmer's Market). Backend was developed
+                        with Django REST Framework (<a href="https://github.com/admkhalid/osiris_server/">GitHub
+                            Repo</a>), and the client app was developed with Flutter by <a
+                            href="https://github.com/rubanthilak">Ruban Thilak</a> (<a
+                            href="https://github.com/Rubanthilak/osiris-frontend">GitHub Repo</a>).</p>
                     <br>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">College Website</h3>
-                    <p class="is-size-6">Revamped my college's website with <a href="https://github.com/SmartSan">Sanjay</a> and <a href="https://www.linkedin.com/in/tamil-selvan-ts/">Tamil Selvan</a>, which got revamped again by another team. <a href="https://tagore-engg.ac.in/oldtec-website-data/credits/">Old Credits</a>.</p>
+                    <p class="is-size-6">Revamped my college's website with <a
+                            href="https://github.com/SmartSan">Sanjay</a> and <a
+                            href="https://www.linkedin.com/in/tamil-selvan-ts/">Tamil Selvan</a>, which got revamped
+                        again by another team. <a href="https://tagore-engg.ac.in/oldtec-website-data/credits/">Old
+                            Credits</a>.</p>
                     <br>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">kConnect (Mini Project)</h3>
-                    <p class="is-size-6">Created a microblogging website with vanilla Django. <a href="https://github.com/admkhalid/kConnect">GitHub Repo</a>.</p>
+                    <p class="is-size-6">Created a microblogging website with vanilla Django. <a
+                            href="https://github.com/admkhalid/kConnect">GitHub Repo</a>.</p>
+                </div>
+            </div>
+            <div class="column is-5">
+                <div class="container card notification is-white px-5">
+                    <h1 class="title is-size-4">Ask Around About Me</h1>
+                    <hr>
+                    <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Prof. Surendran</h3>
+                    <p class="is-size-6">Head, Department of Computer Science and Engineering,<br>Tagore Engineering
+                        College.<br>E-mail: <a href="mailto:hod.cse@tagore-engg.ac.in">hod.cse@tagore-engg.ac.in</a>, <a
+                            href="mailto:babume74@gmail.com">babume74@gmail.com</a></p>
+                    <!-- <br>
+                    <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Prof. Kamesh</h3>
+                    <p class="is-size-6">Sr. Asst. Professor, Department of Information Technology,<br>Tagore
+                        Engineering College.<br>E-mail: <a href="mailto:gkamesh@tagore-engg.ac.in">gkamesh@tagore-engg.ac.in</a></p>
+                    <br>
+                    <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Prof. Sudheer Reddy</h3>
+                    <p class="is-size-6">Asst. Professor, Department of Computer Science and Engineering,<br>Tagore
+                        Engineering College.<br><a href="mailto:bandisudheerreddy@tagore-engg.ac.in">E-mail</a></p> -->
                 </div>
             </div>
     </section>
