adjusted responsive sizing of reference section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             href="https://github.com/admkhalid/kConnect">GitHub Repo</a>.</p>
                 </div>
             </div>
-            <div class="column is-5">
+            <div class="column is-6-desktop is-8-tablet">
                 <div class="container card notification is-white px-5">
                     <h1 class="title is-size-4">Ask Around About Me</h1>
                     <hr>
