trying some seo stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalid Ahamed</title>
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://admkhalid.github.io" />
+    <meta property="og:image" content="https://admkhalid.github.io/assets/propic.jpg" />
+    <title>Kalid Ahamed | admkhalid</title>
+    <meta property="og:title" content="Kalid Ahamed | admkhalid">
+    <meta name="description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
+    <meta property="og:description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
+    <meta name="keywords" content="Kalid Ahamed, admkhalid, Kalid Ahamed Tagore Engineering College, Khalid Ahamed, Amateur Programmer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
