--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Kalid Ahamed | admkhalid">
     <meta name="description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
     <meta property="og:description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
+    <link rel="canonical" href="http://admkhalid.github.io/">
     <meta name="keywords" content="Kalid Ahamed, admkhalid, Kalid Ahamed Tagore Engineering College, Khalid Ahamed, Amateur Programmer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
