added schema.org context for seo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <meta name="keywords" content="Kalid Ahamed, admkhalid, Kalid Ahamed Tagore Engineering College, Khalid Ahamed, Amateur Programmer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "headline": "Kalid Ahamed | admkhalid",
+            "url": "http://admkhalid.github.io",
+            "name": "Kalid Ahamed | admkhalid",
+            "description": "Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
+        }
+    </script>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
