fixed ubuntu font url

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             "description": "Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
         }
     </script>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
