modified headings to resemble unix commands

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="column is-4-tablet" id="titlesec">
                     <div>
                         <h1 class="title">Kalid Ahamed</h1>
-                        <p class="subtitle is-size-5">CSE Graduate <br> Amateur Programmer <br> Casual Gamer</p>
+                        <p class="subtitle is-size-5">CSE Graduate <br> Amateur Programmer <br> Casual Gamer <br>Welcome to my website!<br> Here's a cookie: 🍪</p>
                     </div>
                 </div>
                 <div class="column is-8" style="font-family: Ubuntu;">
@@ -76,7 +76,7 @@
         <div class="columns is-centered is-multiline is-vcentered">
             <div class="column is-5">
                 <div class="container card notification is-white px-5">
-                    <h1 class="title is-size-4">About Me</h1>
+                    <h1 class="title is-size-4">admkhalid@earth:~$ whoami</h1>
                     <hr>
                     <p class="is-size-6 ">Hello! I'm Kalid Ahamed (pronounced Khalidh) and I'm
                         a CSE Graduate from Tagore Engineering College (affiliated to Anna University) (2020), and an
@@ -92,7 +92,7 @@
             </div>
             <div class="column is-5">
                 <div class="container card notification is-white px-5">
-                    <h1 class="title is-size-4">Skills</h1>
+                    <h1 class="title is-size-4">admkhalid@earth:~$ cat Skills</h1>
                     <hr>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Areas</h3>
                     <p class="is-size-6 mb-3">Fullstack Web Development (MVC and RESTful), Machine Learning (Beginner).
