Updated my job position from intern to SDE
Hell yeah! I'm movin' up!d

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="column is-4-tablet" id="titlesec">
                     <div>
                         <h1 class="title">Kalid Ahamed</h1>
-                        <p class="subtitle is-size-5">SDE Intern @ Zoho <a style="text-decoration: underline;" href="https://www.zoho.com/writer/">(Zoho Writer)</a><br> Amateur Programmer <br> Casual Gamer <br>Welcome to my website!<br> Here's a cookie: 🍪</p>
+                        <p class="subtitle is-size-5">SDE @ Zoho <a style="text-decoration: underline;" href="https://www.zoho.com/writer/">(Zoho Writer)</a><br> Amateur Programmer <br> Casual Gamer <br>Welcome to my website!<br> Here's a cookie: 🍪</p>
                     </div>
                 </div>
                 <div class="column is-8" style="font-family: Ubuntu;">
