updated employment status

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta property="og:image" content="https://admkhalid.github.io/assets/propic.jpg" />
     <title>Kalid Ahamed | admkhalid</title>
     <meta property="og:title" content="Kalid Ahamed | admkhalid">
-    <meta name="description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
-    <meta property="og:description" content="Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
+    <meta name="description"
+        content="Kalid Ahamed (admkhalid) Personal Website. SDE @ Zoho, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
+    <meta property="og:description"
+        content="Kalid Ahamed (admkhalid) Personal Website. SDE @ Zoho, Software Developer, Casual Gamer. Tagore Engineering College Alumnus">
     <link rel="canonical" href="http://admkhalid.github.io/">
-    <meta name="keywords" content="Kalid Ahamed, admkhalid, Kalid Ahamed Tagore Engineering College, Khalid Ahamed, Amateur Programmer">
+    <meta name="keywords"
+        content="Kalid Ahamed, admkhalid, Kalid Ahamed Zoho, Khalid Ahamed Zoho, Kalid Ahamed Tagore Engineering College, Khalid Ahamed, SDE @ Zoho">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <script type="application/ld+json">
@@ -22,7 +25,7 @@
             "headline": "Kalid Ahamed | admkhalid",
             "url": "http://admkhalid.github.io",
             "name": "Kalid Ahamed | admkhalid",
-            "description": "Kalid Ahamed (admkhalid) Personal Website. CSE Graduate, Amateur Programmer, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
+            "description": "Kalid Ahamed (admkhalid) Personal Website. SDE @ Zoho, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
         }
     </script>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu" />
@@ -46,7 +49,9 @@
                 <div class="column is-4-tablet" id="titlesec">
                     <div>
                         <h1 class="title">Kalid Ahamed</h1>
-                        <p class="subtitle is-size-5">SDE @ Zoho <a style="text-decoration: underline;" href="https://www.zoho.com/writer/">(Zoho Writer)</a><br> Amateur Programmer <br> Casual Gamer <br>Welcome to my website!<br> Here's a cookie: 🍪</p>
+                        <p class="subtitle is-size-5">SDE @ Zoho <a style="text-decoration: underline;"
+                                href="https://www.zoho.com/writer/">(Zoho Writer)</a><br>Casual Gamer <br>Welcome to my
+                            website!<br> Here's a cookie: 🍪</p>
                     </div>
                 </div>
                 <div class="column is-8" style="font-family: Ubuntu;">
@@ -79,15 +84,15 @@
                     <h1 class="title is-size-4">admkhalid@earth:~$ whoami</h1>
                     <hr>
                     <p class="is-size-6 ">Hello! I'm Kalid Ahamed (pronounced Khalidh) and I'm
-                        a CSE Graduate from Tagore Engineering College (affiliated to Anna University) (2020), and an
-                        amateur
-                        programmer.</p>
+                        a Software Development Engineer @ Zoho Corporation, currently contributing to the development of
+                        <a href="https://www.zoho.com/writer/">Zoho Writer</a>
+                    </p>
                     <br>
                     <p class="is-size-6 ">I love Computers, playing story driven games and
-                        watching well made movies and TV shows. I can develop websites (full-stack development), can
-                        teach computers to do some basic things like predicting cost (Machine Learning with Linear
-                        Regression) and right now I'm trying to become an expert in Deep Learning, hoping to publish
-                        papers that could help humanity in a significant way.</p>
+                        watching well made movies and TV shows. I can develop websites (full-stack development) and
+                        PWAs, can teach computers to do some basic things like predicting cost (Machine Learning with
+                        Linear Regression) and right now I'm trying to become an expert in Deep Learning, hoping to
+                        publish papers that could help humanity in a significant way.</p>
                 </div>
             </div>
             <div class="column is-5">
@@ -146,7 +151,8 @@
                     <br>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Prof. Kamesh</h3>
                     <p class="is-size-6">Sr. Asst. Professor, Department of Information Technology,<br>Tagore
-                        Engineering College.<br>E-mail: <a href="mailto:gkamesh@tagore-engg.ac.in">gkamesh@tagore-engg.ac.in</a></p>
+                        Engineering College.<br>E-mail: <a
+                            href="mailto:gkamesh@tagore-engg.ac.in">gkamesh@tagore-engg.ac.in</a></p>
                     <!-- <br>
                     <h3 class="subtitle is-size-5 mb-1 has-text-weight-semibold">Prof. Sudheer Reddy</h3>
                     <p class="is-size-6">Asst. Professor, Department of Computer Science and Engineering,<br>Tagore
