--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="column is-8" style="font-family: Ubuntu;">
                     <div class="has-text-centered">
-                        <a class="button is-white card is-rounded contacts m-1" href="mailto:admkhalid@zoho.com">
+                        <a class="button is-white card is-rounded contacts m-1" href="mailto:holla@ahamedk.in">
                             <span style="height: 16px;"><embed class="my-icon" src="assets/at.svg" /></span><span
                                 class="ml-1">E-mail</span>
                         </a>
