SEO settings update

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         {
             "@context": "http://schema.org",
             "@type": "WebSite",
-            "headline": "Kalid Ahamed | admkhalid",
-            "url": "http://admkhalid.github.io",
-            "name": "Kalid Ahamed | admkhalid",
-            "description": "Kalid Ahamed (admkhalid) Personal Website. SDE @ Zoho, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
+            "headline": "Kalid Ahamed | Khalid Ahamed | admkhalid",
+            "url": "http://ahamedk.in",
+            "name": "Kalid Ahamed | Khalid Ahamed | admkhalid",
+            "description": "Kalid Ahamed (Khalid Ahamed or admkhalid) Personal Website. SDE @ Zoho, Software Developer, Casual Gamer. Tagore Engineering College Alumnus"
         }
     </script>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu" />
